[gd_scene load_steps=3 format=3 uid="uid://e16thel45nxq"]

[ext_resource type="Script" path="res://scripts/menus/characterCard.gd" id="1_0fk4d"]
[ext_resource type="Theme" uid="uid://dss6di43qaueh" path="res://media/themes/textBoxTheme.tres" id="2_4t5ww"]

[node name="characterCard" type="MarginContainer"]
offset_left = 87.0
offset_top = 44.0
offset_right = 296.0
offset_bottom = 151.0
script = ExtResource("1_0fk4d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme = ExtResource("2_4t5ww")

[node name="LabelName" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 44.0
offset_bottom = 20.0
text = "UroWW"

[node name="LabelLevel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 51.0
offset_top = 4.0
offset_right = 91.0
offset_bottom = 20.0
text = "LV:99"

[node name="LabelClass" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 90.0
offset_top = 4.0
offset_right = 132.0
offset_bottom = 20.0
text = "Wizard"

[node name="LabelXP" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 20.0
offset_right = 65.0
offset_bottom = 36.0
text = "XP: 99999"

[node name="LabelNext" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 20.0
offset_right = 152.0
offset_bottom = 36.0
text = " - Next: 99999"

[node name="LabelLuc" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 90.0
offset_right = 49.0
offset_bottom = 106.0
text = "Luc: 20"

[node name="LabelInt" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 79.0
offset_right = 47.0
offset_bottom = 95.0
text = "Int: 20"

[node name="LabelAgi" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 67.0
offset_right = 47.0
offset_bottom = 83.0
text = "Agi: 20"

[node name="LabelStr" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 56.0
offset_right = 47.0
offset_bottom = 72.0
text = "Str: 20"

[node name="LabelMP" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 44.0
offset_right = 81.0
offset_bottom = 60.0
text = "MP: 999/999"

[node name="LabelHP" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 32.0
offset_right = 81.0
offset_bottom = 48.0
text = "HP: 999/999"

[node name="LabelAttack" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 102.0
offset_top = 32.0
offset_right = 182.0
offset_bottom = 48.0
text = "Attack: 9999"

[node name="LabelDefence" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 92.0
offset_top = 44.0
offset_right = 183.0
offset_bottom = 60.0
text = "Defence: 9999"

[node name="LabelArmor" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 57.0
offset_top = 67.0
offset_right = 189.0
offset_bottom = 83.0
text = "Armor: Leather"

[node name="LabelWeapon" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 57.0
offset_top = 56.0
offset_right = 189.0
offset_bottom = 72.0
text = "Weapon: Short Sword"

[node name="LabelAccessory" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 57.0
offset_top = 79.0
offset_right = 197.0
offset_bottom = 95.0
text = "Accessory: Steel helm"
